package edu.fiuba.algo3;

public class Vehiculo {

    public void pozo(Jugador jugador){

    }

    public void controlPolicial(Jugador jugador){

    }

    public void piquete(Jugador jugador){

    }
}
